--- a/index.html
+++ b/index.html
@@ -10,9 +10,21 @@
 
 <body>
 
-    <header>
+    <header class="bar">
+
+        <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo.png" alt="Oslomet-logo" class="bar__image"></a>
+        <div class="bar__icon bar__icon--style">
+
+            <div class="bar__icon__search">
+                <a href="#" style="text-decoration: none;">Søk 🔍</a>
+            </div>
+            <div class="bar__icon__meny">
+                <a href="#" style="text-decoration: none;">Meny ☰</a>
+            </div>
+        </div>
 
     </header>
+
 
 </body>
 
