--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
         <div class="bar__icon bar__icon--style">
 
 
-            <div class="bar__icon__search">
-                <a href="#" style="text-decoration: none;">Søk 🔍</a>
+            <div class="icon__github">
+                <a href="#" style="text-decoration: none;">Github</a>
             </div>
-            <div class="bar__icon__meny">
+            <div class="icon__activity">
+                <a href="#" style="text-decoration: none;">Activity</a>
+            </div>
+            <div class="icon__accessibility">
+                <a href="#" style="text-decoration: none;">Accessibility</a>
+            </div>
+            <div class="icon__meny">
                 <a href="#" style="text-decoration: none;">Meny ☰</a>
             </div>
 
