--- a/index.html
+++ b/index.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="stylesheet/style.css">
-</head>
+    <link rel="stylesheet" href="stylesheet/style.css" />
+  </head>
 
-<body>
+  <body>
+    <h3>Bachelorprogram</h3>
+    <hr />
+    <h3>Studiested</h3>
+    <p>pilestredet i Oslo</p>
+    <hr />
+    <h3>Varighet</h3>
+    <p>3 år</p>
+    <hr />
+    <h3>omfang</h3>
+    <p>Heltid</p>
+    <hr />
+    <h3>studiepoeng</h3>
+    <p>180</p>
 
-    <header>
+    <hr />
+    <h3>Studiestart</h3>
+    <p>august</p>
+    <hr />
 
-    </header>
+    <h3>Undervisningsspråk</h3>
+    <p>Norsk Engelsk</p>
+    <hr />
+    <h3>Studieplasser</h3>
+    <p>40</p>
 
-</body>
-
+    <header></header>
+  </body>
 </html>
