div and css changes
made changes for the naming of the divs and added a media query for when you have a certain width

--- a/index.html
+++ b/index.html
@@ -16,16 +16,8 @@
 
 
         <div class="bar__icon bar__icon--style">
-
-
-            <div class="icon__github">
-                <a href="#" style="text-decoration: none;">Github</a>
-            </div>
-            <div class="icon__activity">
-                <a href="#" style="text-decoration: none;">Activity</a>
-            </div>
-            <div class="icon__accessibility">
-                <a href="#" style="text-decoration: none;">Accessibility</a>
+            <div class="icon__search">
+                <a href="#" style="text-decoration: none;">Søk 🔍</a>
             </div>
             <div class="icon__meny">
                 <a href="#" style="text-decoration: none;">Meny ☰</a>
