--- a/index.html
+++ b/index.html
@@ -26,8 +26,34 @@
         </div>
 
     </header>
-    <p>hei</p>
 
+    <!--Dette er kopiert kode fra Faysbashir (branch: adding-some-images-and-text) fordi vi hadde problemer med å merge inn til main -->
+    <div class="page">
+        <h3>Bachelorprogram</h3>
+        <hr />
+        <h3>Studiested</h3>
+        <p>pilestredet i Oslo</p>
+        <hr />
+        <h3>Varighet</h3>
+        <p>3 år</p>
+        <hr />
+        <h3>omfang</h3>
+        <p>Heltid</p>
+        <hr />
+        <h3>studiepoeng</h3>
+        <p>180</p>
+
+        <hr />
+        <h3>Studiestart</h3>
+        <p>august</p>
+        <hr />
+
+        <h3>Undervisningsspråk</h3>
+        <p>Norsk Engelsk</p>
+        <hr />
+        <h3>Studieplasser</h3>
+        <p>40</p>
+    </div>
 
 </body>
 
