html, css and image
changed some text in html. NOTE: our team mate(Faysbashir) made the line from 36 to to 55. He made the elements and i developed it more into html and css. I added an image. I made alot of changes in CSS. I used media queries to make it more different on other devices like mobile and laptops.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
     <header class="bar">
 
-        <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo.png" alt="Oslomet-logo" class="bar__image"></a>
-
-
+        <div class="bar__left">
+            <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo.png" alt="Oslomet-logo"
+                    class="bar__image"></a>
+            <a href="#" class="left__studie left__studie--style">Studieoversikt</a>
+        </div>
         <div class="bar__icon bar__icon--style">
             <div class="icon__search">
                 <a href="#" style="text-decoration: none;">Søk 🔍</a>
@@ -27,32 +29,38 @@
 
     </header>
 
-    <!--Dette er kopiert kode fra Faysbashir (branch: adding-some-images-and-text) fordi vi hadde problemer med å merge inn til main -->
+    <!--Dette er kopiert kode fra Faysbashir (branch: adding-some-images-and-text) 
+    fordi vi hadde problemer med å merge -->
     <div class="page">
-        <h3>Bachelorprogram</h3>
+        <img src="image/Anvendt-datateknologi_bachelor.jpg" alt="Bilde av studiet" class="page__image">
+        <h1 class="page__heading page__heading--style">Matematisk modellering og datavitenskap –
+            ingeniør</h1>
+        <h2 style="font-weight: 500;">Bachelorprogram</h2>
         <hr />
         <h3>Studiested</h3>
-        <p>pilestredet i Oslo</p>
+        <p>Pilestredet i Oslo</p>
         <hr />
         <h3>Varighet</h3>
         <p>3 år</p>
         <hr />
-        <h3>omfang</h3>
+        <h3>Omfang</h3>
         <p>Heltid</p>
         <hr />
-        <h3>studiepoeng</h3>
+        <h3>Studiepoeng</h3>
         <p>180</p>
 
         <hr />
         <h3>Studiestart</h3>
-        <p>august</p>
+        <p>August</p>
         <hr />
 
         <h3>Undervisningsspråk</h3>
-        <p>Norsk Engelsk</p>
+        <p>Norsk </p>
+        <p>Engelsk</p>
         <hr />
         <h3>Studieplasser</h3>
         <p>40</p>
+
     </div>
 
 </body>
