Major html and table changes
Removed all of paragraph and headings inside the div "page" class. I added a table big table with styling in css. Added some comments as well

--- a/index.html
+++ b/index.html
@@ -37,7 +37,46 @@
             ingeniør</h1>
         <h2 style="font-weight: 500;">Bachelorprogram</h2>
         <hr />
-        <h3>Studiested</h3>
+
+        <table class="page__table">
+            <tr>
+                <th>Studiested</th>
+                <td>Pilestredet i Oslo</td>
+            </tr>
+
+            <tr>
+                <th>Varighet</th>
+                <td>3 år</td>
+            </tr>
+
+            <tr>
+                <th>Omfang</th>
+                <td>Heltid</td>
+            </tr>
+
+            <tr>
+                <th>Studiepoeng</th>
+                <td>180</td>
+            </tr>
+
+            <tr>
+                <th>Studiestart</th>
+                <td>August</td>
+            </tr>
+
+            <tr>
+                <th>Undervisningsspråk</th>
+                <td>Norsk</td>
+                <td>Engelsk</td>
+            </tr>
+
+            <tr>
+                <th>Studieplasser</th>
+                <td>40</td>
+            </tr>
+        </table>
+
+        <!-- <h3>Studiested</h3>
         <p>Pilestredet i Oslo</p>
         <hr />
         <h3>Varighet</h3>
@@ -59,7 +98,7 @@
         <p>Engelsk</p>
         <hr />
         <h3>Studieplasser</h3>
-        <p>40</p>
+        <p>40</p> -->
 
     </div>
 
