--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <h2 style="font-weight: 500;">Bachelorprogram</h2>
         <hr />
 
+        <!-- Table er tatt fra w3schools link:https://www.w3schools.com/html/html_tables.asp -->
         <table class="page__table">
             <tr>
                 <th>Studiested</th>
@@ -75,30 +76,6 @@
                 <td>40</td>
             </tr>
         </table>
-
-        <!-- <h3>Studiested</h3>
-        <p>Pilestredet i Oslo</p>
-        <hr />
-        <h3>Varighet</h3>
-        <p>3 år</p>
-        <hr />
-        <h3>Omfang</h3>
-        <p>Heltid</p>
-        <hr />
-        <h3>Studiepoeng</h3>
-        <p>180</p>
-
-        <hr />
-        <h3>Studiestart</h3>
-        <p>August</p>
-        <hr />
-
-        <h3>Undervisningsspråk</h3>
-        <p>Norsk </p>
-        <p>Engelsk</p>
-        <hr />
-        <h3>Studieplasser</h3>
-        <p>40</p> -->
 
     </div>
 
