--- a/index.html
+++ b/index.html
@@ -79,6 +79,28 @@
 
     </div>
 
+    <footer class="bottom">
+
+        <div class="bottom__upper">
+            <h1>Hold deg oppdatert på hva som skjer på Oslomet</h1>
+        </div>
+
+        <h1>hei</h1>
+
+        <tabl class="bottom__table">
+            <tr>
+                <th>OSLO METROPOLITAN UNIVERSITY</th>
+                <td>STORBYUNIVERSITETET</td>
+            </tr>
+
+            <tr>
+                <td>Postboks 7, Eksempel plass</td>
+                <td>1147</td>
+                <td>Tlf.: 11 11 11 11</td>
+            </tr>
+            </table>
+
+    </footer>
 </body>
 
 </html>
