added tables and links
added multiple tables and links inside the footer

--- a/index.html
+++ b/index.html
@@ -83,23 +83,53 @@
 
         <div class="bottom__upper">
             <h1>Hold deg oppdatert på hva som skjer på Oslomet</h1>
+            <h2>Abonner på vårt nyhetsbrev</h2>
+
         </div>
 
-        <h1>hei</h1>
+        <div class="bottom__page">
+            <table class="bottom__tableLeft">
+                <tr>
+                    <th>OSLO METROPOLITAN UNIVERSITY</th>
+                    <td>STORBYUNIVERSITETET</td>
+                </tr>
 
-        <tabl class="bottom__table">
-            <tr>
-                <th>OSLO METROPOLITAN UNIVERSITY</th>
-                <td>STORBYUNIVERSITETET</td>
-            </tr>
-
-            <tr>
-                <td>Postboks 7, Eksempel plass</td>
-                <td>1147</td>
-                <td>Tlf.: 11 11 11 11</td>
-            </tr>
+                <tr>
+                    <td>Postboks 7, Eksempel plass</td>
+                    <td>1147</td>
+                    <td>Tlf.: 11 11 11 11</td>
+                    <td><a href="https://www.oslomet.no/om/kontakt">Kontakt oss</a></td>
+                </tr>
             </table>
 
+            <table class="bottom__tableMiddle">
+                <tr>
+                    <th><a href="https://www.oslomet.no/en">English</a></th>
+                    <th><a href="https://www.oslomet.no/alumni">Alumni</a></th>
+                    <th><a href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a></th>
+                    <th><a href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a>
+                    </th>
+                    <th><a href="https://www.oslomet.no/om/for-ansatte">For ansatte</a></th>
+                    <th><a href="https://www.oslomet.no/om/for-studenter">For studenter</a></th>
+                    <th><a href="https://www.oslomet.no/om/ledige-stillinger">Ledige-stillinger</a></th>
+                    <th><a href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklering
+                            og Informasjonskapslar</a></th>
+                    <th><a href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a></th>
+                    <th><a href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a>
+                    </th>
+                    <th> <a href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a></th>
+                </tr>
+            </table>
+
+            <table class="bottom__tableRight">
+                <tr>
+                    <th><a href="https://www.facebook.com/oslomet/">Facebook</a></th>
+                    <th><a href="https://www.facebook.com/oslomet/">X (Twitter)</a></th>
+                    <th><a href="https://no.linkedin.com/school/oslomet/">Linkedln</a></th>
+                    <th><a href="https://www.instagram.com/oslomet/?hl=nb">Instagram</a></th>
+                </tr>
+            </table>
+        </div>
     </footer>
 </body>
 
