--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="stylesheet/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -87,7 +88,7 @@
 
         </div>
 
-        <div class="bottom__page">
+        <div class="bottom__page bottom__page--style">
             <table class="bottom__tableLeft">
                 <tr>
                     <th>OSLO METROPOLITAN UNIVERSITY</th>
@@ -123,7 +124,7 @@
 
             <table class="bottom__tableRight">
                 <tr>
-                    <th><a href="https://www.facebook.com/oslomet/">Facebook</a></th>
+                    <th><a href="https://www.facebook.com/oslomet/" class="fa fa-facebook"></a><a href=""></a></th>
                     <th><a href="https://www.facebook.com/oslomet/">X (Twitter)</a></th>
                     <th><a href="https://no.linkedin.com/school/oslomet/">Linkedln</a></th>
                     <th><a href="https://www.instagram.com/oslomet/?hl=nb">Instagram</a></th>
