--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="stylesheet/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -84,11 +86,12 @@
 
         <div class="bottom__upper">
             <h1>Hold deg oppdatert på hva som skjer på Oslomet</h1>
-            <h2>Abonner på vårt nyhetsbrev</h2>
+            <h2><a href="https://www.oslomet.no/nyhetsbrev">Abonner på vårt nyhetsbrev</a></h2>
 
         </div>
 
         <div class="bottom__page bottom__page--style">
+
             <table class="bottom__tableLeft">
                 <tr>
                     <th>OSLO METROPOLITAN UNIVERSITY</th>
@@ -99,11 +102,11 @@
                     <td>Postboks 7, Eksempel plass</td>
                     <td>1147</td>
                     <td>Tlf.: 11 11 11 11</td>
-                    <td><a href="https://www.oslomet.no/om/kontakt">Kontakt oss</a></td>
+                    <td><a href="https://www.oslomet.no/om/kontakt"><b>Kontakt oss</b></a></td>
                 </tr>
             </table>
 
-            <table class="bottom__tableMiddle">
+            <table class="bottom__tableMiddle bottom__tableMiddle--style">
                 <tr>
                     <th><a href="https://www.oslomet.no/en">English</a></th>
                     <th><a href="https://www.oslomet.no/alumni">Alumni</a></th>
@@ -112,7 +115,7 @@
                     </th>
                     <th><a href="https://www.oslomet.no/om/for-ansatte">For ansatte</a></th>
                     <th><a href="https://www.oslomet.no/om/for-studenter">For studenter</a></th>
-                    <th><a href="https://www.oslomet.no/om/ledige-stillinger">Ledige-stillinger</a></th>
+                    <th><a href="https://www.oslomet.no/om/ledige-stillinger">Ledige stillinger</a></th>
                     <th><a href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklering
                             og Informasjonskapslar</a></th>
                     <th><a href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a></th>
@@ -122,12 +125,18 @@
                 </tr>
             </table>
 
-            <table class="bottom__tableRight">
+            <table class="bottom__tableRight bottom__tableRight--style">
                 <tr>
-                    <th><a href="https://www.facebook.com/oslomet/" class="fa fa-facebook"></a><a href=""></a></th>
-                    <th><a href="https://www.facebook.com/oslomet/">X (Twitter)</a></th>
-                    <th><a href="https://no.linkedin.com/school/oslomet/">Linkedln</a></th>
-                    <th><a href="https://www.instagram.com/oslomet/?hl=nb">Instagram</a></th>
+                    <th><a href="https://www.facebook.com/oslomet/"><i
+                                class="fa-brands fa-square-facebook"></i>Facebook</a>
+                    </th>
+                    <th><a href="https://x.com/oslomet"><i class="fa-brands fa-square-x-twitter"></i>X
+                            (Twitter)</a></th>
+                    <th><a href="https://no.linkedin.com/school/oslomet/"><i
+                                class="fa-brands fa-linkedin"></i>Linkedln</a></th>
+                    <th><a href="https://www.instagram.com/oslomet/?hl=nb"><i
+                                class="fa-brands fa-square-instagram"></i>Instagram</a></th>
+
                 </tr>
             </table>
         </div>
