making dropdwon bar

--- a/index.html
+++ b/index.html
@@ -24,8 +24,19 @@
             <div class="icon__search">
                 <a href="#" style="text-decoration: none;">Søk 🔍</a>
             </div>
-            <div class="icon__meny">
-                <a href="#" style="text-decoration: none;">Meny ☰</a>
+            <div class="bar__meny">
+                <div class="bar__dropdown">
+                    <button class="bar__dropdownbtn">Meny ☰</button>
+                    <div class="bar__dropdown-content">
+                        <a href="https://www.oslomet.no/studier">Studier</a>
+                        <a href="https://www.oslomet.no/forskning">Forskningen vår</a>
+                        <a href="https://www.oslomet.no/om/samarbeid">Samarbeid</a>
+                        <a href="https://www.oslomet.no/ub">Universitetsbiblioteket</a>
+                        <a href="https://www.oslomet.no/om">Om Oslomet</a>
+                        <a href="https://www.oslomet.no/om/kontakt">Kontakt</a>
+                        <a href="https://www.oslomet.no/om/for-studenter">For studenter</a>
+                    </div>
+                </div>
             </div>
 
         </div>
