added to left side

--- a/index.html
+++ b/index.html
@@ -15,15 +15,9 @@
 
     <header class="bar">
 
-        <div class="bar__left">
-            <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo.png" alt="Oslomet-logo"
-                    class="bar__image"></a>
-            <a href="#" class="left__studie left__studie--style">Studieoversikt</a>
-        </div>
+
         <div class="bar__icon bar__icon--style">
-            <div class="icon__search">
-                <a href="#" style="text-decoration: none;">Søk 🔍</a>
-            </div>
+
             <div class="bar__meny">
                 <div class="bar__dropdown">
                     <button class="bar__dropdownbtn">Meny ☰</button>
@@ -38,7 +32,15 @@
                     </div>
                 </div>
             </div>
+            <div class="icon__search">
+                <a href="#" style="text-decoration: none;">Søk 🔍</a>
+            </div>
 
+        </div>
+        <div class="bar__right">
+            <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo.png" alt="Oslomet-logo"
+                    class="bar__image"></a>
+            <a href="#" class="right__studie right__studie--style">Studieoversikt</a>
         </div>
 
     </header>
