--- a/index.html
+++ b/index.html
@@ -93,6 +93,183 @@
             </tr>
         </table>
 
+        <div class="page__trekk">
+            <div class="page__trekk-item">
+                <input type="checkbox" id="item1">
+                <label class="page__trekk-header" for="item1">Opptakskrav og poeng </label>
+                <div class="page__trekk-content">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam ducimus
+                        iure quasi tempore
+                        recusandae? Error ab iste sunt odio repellendus mollitia repellat esse. Ipsa sit neque illo
+                        dignissimos molestias aliquam.</p>
+                    <ul class="page__trekk-liste">
+                        <li><a href="https://www.samordnaopptak.no/info/opptak/opptak-uhg/">generrell studiekompetanse
+                                (samordnaopptak.no)</a> eller <a
+                                href="https://www.oslomet.no/studier/soknad-og-opptak/realkompetanse/realkompetanse-ingenior">oppfylle
+                                kravene til realkompetanse</a></li>
+                        <li>matematikk R1 og R2</li>
+                        <li>fysikk 1</li>
+                    </ul>
+                    <p>Det kan være konkurranse om plassene. Ved forrige opptak kom alle kvalifiserte søkere inn.</p>
+                    <p>Hvis du mangler generell studiekompetanse eller enkelte fag fra videregående skole, kan du søke
+                        på dette studiet om du har <a href="https://www.oslomet.no/studier/tkd/forkurs-ingenior">bestått
+                            ettårig forkurs for ingeniørutdanning.</a></p>
+
+                </div>
+            </div>
+            <div class="page__trekk-item">
+                <input type="checkbox" id="item2">
+                <label class="page__trekk-header" for="item2">Slik søker du</label>
+                <div class="page__trekk-content">
+                    <p>Du søker på Samordna opptak med studiekode 215 503.</p>
+                    <ul class="page__trekk-liste">
+                        <li>15. april: ordinær søknadsfrist</li>
+                        <li>1. mars: frist for enkelte søkere</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="page__trekk-item">
+                <input type="checkbox" id="item3">
+                <label class="page__trekk-header" for="item3">Hva lærer du?</label>
+                <div class="page__trekk-content">
+                    <p>Bachelor i matematisk modellering og datavitenskap kobler sammen matematikk, informatikk, fysikk
+                        og statistikk. </p>
+                    <p>Du får innsikt i matematiske modeller som brukes i praktisk problemløsning blant annet i
+                        medisinsk kjemi, biologiske prosesser og ulike samfunnssystemer. </p>
+                    <p>Det første studieåret har du emner i blant annet matematikk, programmering, fysikk og kjemi for å
+                        få en felles forståelse av tematikken.</p>
+                    <p>Det siste semesteret skriver du en bacheloroppgave tett knyttet til problemstillinger i
+                        arbeidslivet.</p>
+                    <p>Første året velger du hvilken av disse spesialiseringene du vil ta.</p>
+
+                </div>
+            </div>
+            <div class="page__trekk-item">
+                <input type="checkbox" id="item4">
+                <label class="page__trekk-header" for="item4">Studiets oppbygging</label>
+                <div class="page__trekk-content">
+                    <div class="page__elementer">
+                        <div class="page__studieår">
+                            <h2>1. studieår</h2>
+
+                        </div>
+                        <ul class="page__liste">
+
+                            <h2>hei</h2>
+                            <div class="page__boks">
+                                <li><a
+                                        href="https://student.oslomet.no/studier/-/studieinfo/emne/DAPE1300/2024/H%C3%98ST">Diskret
+                                        matematikk</a>
+                                    <p style="margin-block-start: 0;">DAPE1300</p>
+                                </li>
+                            </div>
+
+                            <div class="page__boks">
+                                <li><a
+                                        href="https://student.oslomet.no/studier/-/studieinfo/emne/DAPE1400/2024/H%C3%98ST">Programmering</a>
+                                </li>
+                            </div>
+                            <div class="page__boks">
+                                <li><a
+                                        href="https://student.oslomet.no/studier/-/studieinfo/emne/DATA1100/2024/H%C3%98ST">Teknologi
+                                        og samfunn for programmerere</a></li>
+                            </div>
+                            <div class="page__boks">
+                                <li><a
+                                        href="https://student.oslomet.no/studier/-/studieinfo/emne/MAMO1100/2024/H%C3%98ST">Innføring
+                                        i modeller og beregninger</a></li>
+                            </div>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="page__trekk-item">
+                <input type="checkbox" id="item5">
+                <label class="page__trekk-header" for="item5">Hvordan foregår undervisningen?</label>
+                <div class="page__trekk-content">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam ducimus iure quasi tempore
+                        recusandae? Error ab iste sunt odio repellendus mollitia repellat esse. Ipsa sit neque illo
+                        dignissimos molestias aliquam.</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="page__grid-container">
+            <!-- Anvendt datateknologi -->
+            <a href="https://www.oslomet.no/studier/tkd/anvendt-datateknologi" class="page__grid-item">
+                <h2 class="page__tittel">Anvendt datateknologi</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/bioteknologi-kjemiingenior" class="page__grid-item">
+                <!-- Bioteknologi og kjemiingeniør -->
+                <h2 class="page__tittel">Bioteknologi- og kjemiingeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/byggingenior" class="page__grid-item">
+                <!-- Byggingeniør -->
+                <h2 class="page__tittel">Byggingeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/dataingenior" class="page__grid-item">
+                <!-- Dataingeniør -->
+                <h2 class="page__tittel">Dataingeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/elektronikkingenior" class="page__grid-item">
+                <!-- Elektronikkingeniør -->
+                <h2 class="page__tittel">Elektronikkingeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/informasjonsteknologi" class="page__grid-item">
+                <!-- Informasjonsteknologi -->
+                <h2 class="page__tittel">Informasjonsteknologi</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/maskiningenior" class="page__grid-item">
+                <!-- Maskiningeniør -->
+                <h2 class="page__tittel">Maskiningeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/tre-termin-ingenior" class="page__grid-item">
+                <!-- Tre termins-ordning -->
+                <h2 class="page__tittel">Tre-terminsordning til ingeniørutdanning</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>Heltid</li>
+                </ul>
+            </a>
+        </div>
+
     </div>
 
     <footer class="bottom">
