--- a/index.html
+++ b/index.html
@@ -605,90 +605,109 @@
                     dignissimos molestias aliquam.</p>
             </div>
         </div>
+
+        <h1>Faglig leder</h1>
+        <div class="page__boks-elementer">
+            <a href="https://www.oslomet.no/om/ansatt/krhel3944/" class="page__faglig-leder-boks">
+                <img src="image/faglig-leder.jpg" alt="Bilde av Kristoffer Hellton" class="page__faglig-leder-image">
+                <table class="page__faglig-leder-content">
+                    <tr>
+                        <th>
+                            <h2>Kristoffer Herland Hellton</h2>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td><b>Førsteamanuensis</b></td>
+                        <td>+47 672 37 240</td>
+                        <td>kristoffer.hellton@oslomet.no</td>
+                    </tr>
+
+                </table>
+            </a>
+        </div>
+
+
+
+        <h1>Du er kanskje også interessert i disse?</h1>
+        <div class="page__grid-container">
+            <!-- Anvendt datateknologi -->
+            <a href="https://www.oslomet.no/studier/tkd/anvendt-datateknologi" class="page__grid-item">
+                <h2 class="page__tittel">Anvendt datateknologi</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/bioteknologi-kjemiingenior" class="page__grid-item">
+                <!-- Bioteknologi og kjemiingeniør -->
+                <h2 class="page__tittel">Bioteknologi- og kjemiingeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/byggingenior" class="page__grid-item">
+                <!-- Byggingeniør -->
+                <h2 class="page__tittel">Byggingeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/dataingenior" class="page__grid-item">
+                <!-- Dataingeniør -->
+                <h2 class="page__tittel">Dataingeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/elektronikkingenior" class="page__grid-item">
+                <!-- Elektronikkingeniør -->
+                <h2 class="page__tittel">Elektronikkingeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/informasjonsteknologi" class="page__grid-item">
+                <!-- Informasjonsteknologi -->
+                <h2 class="page__tittel">Informasjonsteknologi</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/maskiningenior" class="page__grid-item">
+                <!-- Maskiningeniør -->
+                <h2 class="page__tittel">Maskiningeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/tre-termin-ingenior" class="page__grid-item">
+                <!-- Tre termins-ordning -->
+                <h2 class="page__tittel">Tre-terminsordning til ingeniørutdanning</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram, 3år</li>
+                    <li>Studiested: Pilestredet, Oslo</li>
+                    <li>Heltid</li>
+                </ul>
+            </a>
+        </div>
     </div>
 
-    </div>
+
     <!-- Slutt av page -->
 
-
-
-
-    <div class="page__grid-container">
-        <!-- Anvendt datateknologi -->
-        <a href="https://www.oslomet.no/studier/tkd/anvendt-datateknologi" class="page__grid-item">
-            <h2 class="page__tittel">Anvendt datateknologi</h2>
-            <ul class="page__detaljer">
-                <li>Bachelorprogram, 3år</li>
-                <li>Studiested: Pilestredet, Oslo</li>
-                <li>heltid</li>
-            </ul>
-        </a>
-        <a href="https://www.oslomet.no/studier/tkd/bioteknologi-kjemiingenior" class="page__grid-item">
-            <!-- Bioteknologi og kjemiingeniør -->
-            <h2 class="page__tittel">Bioteknologi- og kjemiingeniør</h2>
-            <ul class="page__detaljer">
-                <li>Bachelorprogram, 3år</li>
-                <li>Studiested: Pilestredet, Oslo</li>
-                <li>heltid</li>
-            </ul>
-        </a>
-        <a href="https://www.oslomet.no/studier/tkd/byggingenior" class="page__grid-item">
-            <!-- Byggingeniør -->
-            <h2 class="page__tittel">Byggingeniør</h2>
-            <ul class="page__detaljer">
-                <li>Bachelorprogram, 3år</li>
-                <li>Studiested: Pilestredet, Oslo</li>
-                <li>heltid</li>
-            </ul>
-        </a>
-        <a href="https://www.oslomet.no/studier/tkd/dataingenior" class="page__grid-item">
-            <!-- Dataingeniør -->
-            <h2 class="page__tittel">Dataingeniør</h2>
-            <ul class="page__detaljer">
-                <li>Bachelorprogram, 3år</li>
-                <li>Studiested: Pilestredet, Oslo</li>
-                <li>heltid</li>
-            </ul>
-        </a>
-        <a href="https://www.oslomet.no/studier/tkd/elektronikkingenior" class="page__grid-item">
-            <!-- Elektronikkingeniør -->
-            <h2 class="page__tittel">Elektronikkingeniør</h2>
-            <ul class="page__detaljer">
-                <li>Bachelorprogram, 3år</li>
-                <li>Studiested: Pilestredet, Oslo</li>
-                <li>Heltid</li>
-            </ul>
-        </a>
-        <a href="https://www.oslomet.no/studier/tkd/informasjonsteknologi" class="page__grid-item">
-            <!-- Informasjonsteknologi -->
-            <h2 class="page__tittel">Informasjonsteknologi</h2>
-            <ul class="page__detaljer">
-                <li>Bachelorprogram, 3år</li>
-                <li>Studiested: Pilestredet, Oslo</li>
-                <li>Heltid</li>
-            </ul>
-        </a>
-        <a href="https://www.oslomet.no/studier/tkd/maskiningenior" class="page__grid-item">
-            <!-- Maskiningeniør -->
-            <h2 class="page__tittel">Maskiningeniør</h2>
-            <ul class="page__detaljer">
-                <li>Bachelorprogram, 3år</li>
-                <li>Studiested: Pilestredet, Oslo</li>
-                <li>Heltid</li>
-            </ul>
-        </a>
-        <a href="https://www.oslomet.no/studier/tkd/tre-termin-ingenior" class="page__grid-item">
-            <!-- Tre termins-ordning -->
-            <h2 class="page__tittel">Tre-terminsordning til ingeniørutdanning</h2>
-            <ul class="page__detaljer">
-                <li>Bachelorprogram, 3år</li>
-                <li>Studiested: Pilestredet, Oslo</li>
-                <li>Heltid</li>
-            </ul>
-        </a>
-    </div>
-
-    </div>
 
     <footer class="bottom">
 
