--- a/index.html
+++ b/index.html
@@ -607,23 +607,36 @@
         </div>
 
         <h1>Faglig leder</h1>
-        <div class="page__boks-elementer">
-            <a href="https://www.oslomet.no/om/ansatt/krhel3944/" class="page__faglig-leder-boks">
-                <img src="image/faglig-leder.jpg" alt="Bilde av Kristoffer Hellton" class="page__faglig-leder-image">
-                <table class="page__faglig-leder-content">
-                    <tr>
-                        <th>
-                            <h2>Kristoffer Herland Hellton</h2>
-                        </th>
-                    </tr>
-                    <tr>
-                        <td><b>Førsteamanuensis</b></td>
-                        <td>+47 672 37 240</td>
-                        <td>kristoffer.hellton@oslomet.no</td>
-                    </tr>
+        <div class="page__wrapper">
+            <div class="page__boks-elementer">
+                <a href="https://www.oslomet.no/om/ansatt/krhel3944/" class="page__faglig-leder-boks">
+                    <img src="image/faglig-leder.jpg" alt="Bilde av Kristoffer Hellton"
+                        class="page__faglig-leder-image">
+                    <table class="page__faglig-leder-content">
+                        <tr>
+                            <th>
+                                <h2>Kristoffer Herland Hellton</h2>
+                            </th>
+                        </tr>
+                        <tr>
+                            <td><b>Førsteamanuensis</b></td>
+                            <td>+47 672 37 240</td>
+                            <td>kristoffer.hellton@oslomet.no</td>
+                        </tr>
+                    </table>
+                </a>
+            </div>
 
-                </table>
-            </a>
+            <table class="page__studie-info">
+                <tr>
+                    <td> <b>Studiested</b></td>
+                    <td>Studiested Pilestredet</td>
+                </tr>
+                <tr>
+                    <td><b>Spørsmål om utdanningen?</b></td>
+                    <td>Har du spørsmål om utdanningen, kontakt oss gjennom vårt kontaktskjema</td>
+                </tr>
+            </table>
         </div>
 
 
