added new elements
added links to the website. i fixed text and removed some divs

--- a/index.html
+++ b/index.html
@@ -606,37 +606,45 @@
             </div>
         </div>
 
-        <h1>Faglig leder</h1>
-        <div class="page__wrapper">
-            <div class="page__boks-elementer">
-                <a href="https://www.oslomet.no/om/ansatt/krhel3944/" class="page__faglig-leder-boks">
-                    <img src="image/faglig-leder.jpg" alt="Bilde av Kristoffer Hellton"
-                        class="page__faglig-leder-image">
-                    <table class="page__faglig-leder-content">
-                        <tr>
-                            <th>
-                                <h2>Kristoffer Herland Hellton</h2>
-                            </th>
-                        </tr>
-                        <tr>
-                            <td><b>Førsteamanuensis</b></td>
-                            <td>+47 672 37 240</td>
-                            <td>kristoffer.hellton@oslomet.no</td>
-                        </tr>
-                    </table>
-                </a>
-            </div>
 
-            <table class="page__studie-info">
-                <tr>
-                    <td> <b>Studiested</b></td>
-                    <td>Studiested Pilestredet</td>
-                </tr>
-                <tr>
-                    <td><b>Spørsmål om utdanningen?</b></td>
-                    <td>Har du spørsmål om utdanningen, kontakt oss gjennom vårt kontaktskjema</td>
-                </tr>
-            </table>
+        <div class="page__wrapper">
+            <h2>Studiested</h2>
+            <a href="https://www.oslomet.no/om/studiested-pilestredet">
+                <p>Studiested Pilestredet</p>
+            </a>
+
+            <h2>Spørsmål om utdanningen?</h2>
+            <a href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student">
+                <p>Har du spørsmål om utdanningen, kontakt oss gjennom vårt kontaktskjema.</p>
+            </a>
+
+            <h2>Faglig leder</h2>
+
+            <a href="https://www.oslomet.no/om/ansatt/krhel3944/" class="page__faglig-leder-boks">
+                <table>
+                    <tr>
+                        <td rowspan="4" class="profile-image">
+                            <img src="image/faglig-leder.jpg" alt="Kristoffer Herland Hellton">
+                        </td>
+                        <th>Navn</th>
+                        <td>Kristoffer Herland Hellton</td>
+                    </tr>
+                    <tr>
+                        <th>Stilling</th>
+                        <td>Førsteamanuensis</td>
+                    </tr>
+                    <tr>
+                        <th>Telefon</th>
+                        <td>+47 672 37 240</td>
+                    </tr>
+                    <tr>
+                        <th>E-post</th>
+                        <td>kristoffer.hellton@oslomet.no</td>
+                    </tr>
+                </table>
+            </a>
+
+
         </div>
 
 
